--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,80 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    font-family: Fira Sans;
+}
+
+/* share styles */
+.btn{
+    border-radius: 8px;
+    background: rgb(0, 106, 80);
+    padding: 15px 30px 15px 30px;
+    border: none;
+    color: white;
+}
+
+/* styling navbar */
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100px;
+    padding: 10px 160px;
+}
+nav h1{
+    color: rgb(14, 14, 14);
+    font-family: Fira Sans;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 38px;
+    letter-spacing: 0%;
+    text-align: left;
+}
+nav button{
+    width: 110px;
+    height: 45px;
+    border: 1px solid rgb(0, 106, 80);
+    border-radius: 8px;
+    background-color: white;
+}
+
+/* banner section */
+
+.banner{
+    width: 1000px;
+    height: 360px;
+    margin: 0 auto;
+    padding: 80px 100px;
+    border-radius: 24px;
+    background: rgb(198, 228, 214);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 40px;
+}
+.banner-container{
+    width: 620px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+ .banner-container .sub-title{
+    color: rgba(14, 14, 14, 0.5);
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 25px;
+    letter-spacing: 0%;
+    text-align: left;
+}
+.banner-container .title{
+    color: rgb(14, 14, 14);
+    font-size: 44px;
+    font-weight: 700;
+    line-height: 57px;
+    letter-spacing: 0%;
+    text-align: left;
+    /* margin:12px 60px 18px 0px; */
+}
