--- a/styles/style.css
+++ b/styles/style.css
@@ -144,4 +144,90 @@ nav button{
     text-align: left;
     margin: 20px 0px 10px 0px;
 }
+ /* vision of future */
 
+ #future{
+    width: 1200px;
+    margin: 80px auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 30; 
+    padding: 0px;
+ }
+ .card-container{
+    display: flex;
+    justify-content: space-between;
+    gap: 22px;
+    margin-top: 30px;
+ }
+ .card{
+    height: 240px;
+    display: flex;
+   flex-direction: column;
+   justify-content: flex-start;
+   align-items: flex-start;
+   gap: 24;
+   padding: 16px;
+   box-sizing: border-box;
+   border-radius: 16px;
+ }
+ .card img{
+    width: 55px;
+    height: 55px;
+    left: 1px;
+    top: 1px;
+ }
+ .card h1{
+    color: rgba(14, 14, 14, 0.8);
+    font-family: Fira Sans;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 22px;
+    letter-spacing: 0%;
+    text-align: left;
+    margin: 12px 0px 13px 0px;
+ }
+ .card p{
+    color: rgba(14, 14, 14, 0.7);
+    font-family: Fira Sans;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0%;
+    text-align: left;
+ }
+ .card .btn-1{
+    width: 122px;
+    height: 41px;
+    border-radius: 8px;
+    background: rgb(84, 144, 245);
+    font-size: 15px;
+    padding: 10px 17px 10px 17px;
+    margin: 12px 0px 30px 0px;
+    border: none;
+    color: white;
+ }
+ .card .btn-2{
+    width: 122px;
+    height: 41px;
+    border-radius: 8px;
+    background: rgb(9, 161, 92);;
+    font-size: 15px;
+    padding: 10px 17px 10px 17px;
+    margin: 12px 0px 30px 0px;
+    border: none;
+    color: white;
+ }
+ .card .btn-3{
+    width: 122px;
+    height: 41px;
+    border-radius: 8px;
+    background: rgb(255, 194, 57);
+    font-size: 15px;
+    padding: 10px 17px 10px 17px;
+    margin: 12px 0px 30px 0px;
+    border: none;
+    color: white;
+ }
