--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     font-family: Fira Sans;
+    background-color: #f1f1f3;
 }
 
 /* share styles */
@@ -22,6 +23,26 @@
     line-height: 20px;
     letter-spacing: 0%;
     text-align: left;
+}
+.headline{
+    color: rgb(14, 14, 14);
+    font-family: Fira Sans;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 48px;
+    letter-spacing: 0%;
+    text-align: left;
+}
+.paragraph{
+    color: rgba(14, 14, 14, 0.7);
+    font-family: Fira Sans;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0%;
+    text-align: left;
+    margin-top: 12px;
+    margin-bottom: 12px;
 }
 
 /* styling navbar */
@@ -279,6 +300,72 @@ text-align: left;
    text-align: left;
 }
 
- 
+/* recent section */
 
+ .recent{
+    width: 1200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 24px;
+    padding: 0px;
+    margin: 20px 80px;
+
+ }
+ .recent .container{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 24px;
+    padding: 0px;
+ }
+ 
+ .card-img{
+    border-radius: 20px;
+ }
+ .recent .card-1{
+    padding: 48px;
+   border-radius: 20px;
+   background-color: rgb(255, 255, 255);
+    display: flex;
+   flex-direction: row;
+   justify-content: flex-start;
+   gap: 32px;
+ }
+ .recent .card-2{
+    padding: 48px;
+   border-radius: 20px;
+   background-color: rgb(255, 255, 255);
+    display: flex;
+   flex-direction: row;
+   justify-content: flex-start;
+   gap: 32px;
+ }
+ .recent .card-3{
+    background-color: rgb(255, 255, 255);
+    padding: 48px;
+   border-radius: 20px;
+    display: flex;
+   flex-direction: row;
+   justify-content: flex-start;
+   gap: 32px;
+ }
+ .card-detail{
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 32;
+    padding: 0px;
+ }
+ .card-detail h1,p,img{
+    background-color: rgb(255, 255, 255);
+ }
+.aljezeera{
+    margin-top: 12px;
+    margin-bottom: 12px;
+}
 
